@@ -2,6 +2,7 @@ Revision history for Net-Silverpeak-Orchestrator
 
 {{ $NEXT }}
     - add has_segmentation_enabled
+    - add get_vrf_security_policies_by_ids
 
 0.008000  2023-09-14 14:21:59+02:00 Europe/Vienna
     - enable TLS verification by default
